# agent-sandbox-runtime

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README (1).md  README.md  TODO.md  Vagrantfile  bug_report.md  decision.md  gitignore-additions.txt  pyproject.toml  setup-vm.sh
.devcontainer/: devcontainer.json  post-create.sh
.github/workflows/: ci.yml
bpf/: Makefile  common.h  creds.bpf.c  exec.bpf.c  file.bpf.c  network.bpf.c
cli/agentctl/: go.mod  main.go
cmd/agentd/: main_linux.go
daemon/: .gitignore  .golangci.yml  CAVEATS.md  LICENSE  LIMITATIONS.md  Makefile  NOTICE  README.md  claude-code-sandbox-daemon-brief.md  go.mod
daemon/api/: proto.md
daemon/bpf/: README.md  common.h.reference
daemon/deploy/: install.sh  uninstall.sh
daemon/docs/: architecture.md  daemon-model-comparison.md  integration-with-mehul-ebpf.md  operations.md
daemon/examples/: curl-blocked.json
daemon/scripts/: verify-host.sh
deploy/systemd/: agent-sandbox.service
docs/: ARCHITECTURE.md  HOW_IT_WORKS.md  INTERFACES.md  P4_HANDOFF.md  P4_PR_DRAFT.md  RECIPES.md  THREAT_MODEL.md  USABILITY_GAPS.md  operations.md
e2e/: testscript_test.go
examples/: demo-agent.yaml
gui/: app.js  index.html  style.css
iso/: README.md
orchestrator/: .env.example  README.md  __init__.py  __main__.py  cli.py  run_llm_agent.py
policies/: default.yaml  strict-llm-agent.yaml
scripts/: install-viewer-sudoers.sh  local-demo.sh  quickstart.sh  setup-lima.sh  setup-vagrant.sh  setup-vm.sh
systemd/: agentsandbox.service
viewer/: DEMO_SCRIPT.md  README.md  index.html
(+223 files in other folders)
